# blackjack-cli

./: .pre-commit-config.yaml  Blackjack.js  README.md  pyproject.toml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
blackjack_cli/: stats.py
deck/: __init__.py  card.py
src/blackjack/: blackjack.py  card.py  cardhand.py  config.py  console.py  deck.py  stats.py
src/blackjack-cli/: stats.py
src/blackjack-cli/models/: __init__.py  stats_model.py
src/blackjack/models/: stats_model.py
src/blackjack_cli/: __init__.py  blackjack.py  config.py  console.py
src/blackjack_cli/models/: __init__.py  stats_model.py
src/deck/: __init__.py  card.py  cardhand.py  deck.py
tests/: test_card.py  test_gamestate.py  test_scoring.py
