[tool.poetry]
name = "blackjack-cli"
version = "0.3.1"
description = "This is a cli-based blackjack game! Woo!"
authors = ["Vlek <derek@mccammond.org>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich-click = "^1.6.1"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
pytest = "^8.2.2"
coverage = "^7.3.1"
pre-commit-hooks = "^4.4.0"

[tool.poetry.scripts]
blackjack = "blackjack_cli.console:bj"
bj = "blackjack_cli.console:bj"
hit = "blackjack_cli.console:hit"
stand = "blackjack_cli.console:stand"
stay = "blackjack_cli.console:stand"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
parallel = true
branch = true
source = ["blackjack-cli"]
omit = ["tests"]

[tool.coverage.report]
show_missing = false
fail_under = 90

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
