[project]
name = "blackjack-cli"
version = "1.1.0"
description = "This is a cli-based blackjack game! Woo!"
authors = [{ name = "Vlek", email = "derek@mccammond.org" }]
requires-python = ">=3.10,<4"
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rich-click>=1.6.1,<2",
    "pyyaml>=6.0.1,<7",
]

[project.urls]
Repository = "https://github.com/vlek/blackjack-cli"

[project.scripts]
blackjack = "blackjack_cli.console:bj"
bj = "blackjack_cli.console:bj"
hit = "blackjack_cli.console:hit"
stand = "blackjack_cli.console:stand"
stay = "blackjack_cli.console:stand"

[dependency-groups]
dev = [
    "black>=26.5.1,<27",
    "pytest>=8.2.2,<10",
    "coverage>=7.3.1,<8",
    "pre-commit-hooks>=4.4,<6.0",
    "pyupgrade>=3.21.2",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = [
    "src/blackjack_cli",
    "src/deck",
]

[tool.hatch.build.targets.wheel]
include = [
    "src/blackjack_cli",
    "src/deck",
]

[tool.hatch.build.targets.wheel.sources]
"src/blackjack_cli" = "blackjack_cli"
"src/deck" = "deck"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
parallel = true
branch = true
source = ["blackjack-cli"]
omit = ["tests"]

[tool.coverage.report]
show_missing = false
fail_under = 90

[flake8]
max-line-length = 88
